# mono_depth

./: .gitignore  HOW_TO_SET_ENV.md  README.md  download_model.py  perfomance.py  pyproject.toml  setup.cfg  stock_downloads.md
networks/DPT/: README.md  run_monodepth.py  run_segmentation.py
networks/DPT/dpt/: blocks.py  models.py  transforms.py  vit.py
networks/DPT/util/: io.py  misc.py  pallete.py
networks/adabins/: .gitignore  README.md  args_test_evo.txt  args_train_evo.txt  args_train_kitti_eigen.txt  dataloader.py  evaluate.py  infer.py  loss.py  options.py  train.py  utils.py
networks/bts/: .gitignore  README.md
networks/bts/model/: arguments_test_eigen.txt  arguments_test_evo.txt  arguments_train_eigen.txt  arguments_train_evo.txt  bts.py  bts_dataloader.py  bts_eval.py  bts_evo.py  bts_main.py  bts_options.py  bts_test.py  distributed_sampler_no_evenly_divisible.py  run_bts_eval_schedule.py
networks/bts/train_test_inputs/: creator.py
networks/bts/utils/: eval_with_pngs.py  extract_official_train_test_set_from_mat.py
networks/dorn/: cal_alpha_beta.py  test.py  train.py
networks/dorn/config/: deeplab.yaml  (+4 more)
networks/fastdepth/: README.md  config.py  loss_function.py  main.py  metrics.py  test.py  train.py  utils.py
networks/featdepth/: README.md  infer_singleimage.py  train.py
networks/monodepth2/: .gitignore  README.md  depth_prediction_example.ipynb  evaluate_depth.py  evaluate_pose.py  export_gt_depth.py  filenames.csv  kitti_utils.py  layers.py  options.py  test_simple.py  train.py  trainer.py  utils.py
tests/: test_ds_project.py
(+198 files in other folders)
