[tool.poetry]
name = "monocular_depthS"
version = "0.1.0"
description = "Template repository to start your Data Science project from"
authors = ["Vladilav Goncharenko <vladislav.goncharenko@phystech.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.1"
torch = "^1.7.1"
tensorboard = "^2.4.1"
mlflow = "^1.14.0"
matplotlib = "^3.3.4"
imgaug = "^0.4.0"
numpy = "^1.20.1"
scipy = "^1.6.1"
Pillow = "^8.1.0"
cv = "^1.0.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.10.1"
dvc = "^1.11.16"

[tool.black]
line-length = 90
target-version = ["py38"]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
lines_after_imports = 2

[tool.nbqa.mutate]
black = 1
isort = 1

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
